--- a/src/app/modules/dashboard/admin-ticket/admin-ticket.component.html
+++ b/src/app/modules/dashboard/admin-ticket/admin-ticket.component.html
@@ -11,7 +11,7 @@
                       </a>
                     </div>
                     <div class="col-md-7">
-                        <h1 style="color: white">Admin | Tickets </h1>
+                        <h1 style="color: white">Administrador | Tickets </h1>
                         <div class="card-text" style="color: white">{{organization.name}}</div>
                         <hr style="color: white">
                         <button mat-raised-button style="background-color: #c72c41;color:white;" (click)="openDialog()">+ Ticket</button>
