--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -4,26 +4,26 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card border-0 shadow rounded-3 my-5">
         <div class="card-body p-4 p-sm-5">
-          <h5 class="card-title text-center mb-5 fw-light fs-5 text-uppercase fw-bold">Sign In</h5>
+          <h5 class="card-title text-center mb-5 fw-light fs-5 text-uppercase fw-bold">Iniciar Sesión</h5>
 
             <div class="form-floating mb-3">
               <input type="email" class="form-control" id="email" placeholder="Email address" [(ngModel)]="email" #userName required>
-              <label for="email">Example: someone@gmail.com</label>
+              <label for="email">Ejemplo: alguien@gmail.com</label>
             </div>
             <div class="form-floating mb-3">
               <input type="password" id="Password" class="form-control" placeholder="Password" [(ngModel)]="password" #userPassword required>
-              <label for="Password">Password</label>
+              <label for="Password">Contraseña</label>
             </div>
 
             <div class="d-grid">
-              <input type="button" class="btn btn-primary btn-login text-uppercase fw-bold" value="Log in" (click)="login()">
+              <input type="button" class="btn btn-primary btn-login text-uppercase fw-bold" value="Iniciar Sesión" (click)="login()">
             </div>
             
             <hr class="my-4">
 
             <div class="d-grid mb-2">
               <button type="button" class="btn btn-google btn-login text-uppercase fw-bold" (click)="authService.GoogleAuth()">
-                <i class="fab fa-google me-2"></i> Sign in with Google
+                <i class="bi bi-google"></i> Iniciar Sesión con Google
               </button>
             </div>
 
