--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="form-floating mb-3">
               <input type="text" class="form-control" placeholder="Nombre" [(ngModel)]="displayName" #userName required />
-              <label for="name">Nombre</label>
+              <label for="name">Alias</label>
             </div>
 
             <div class="d-grid">
