--- a/src/app/modules/dashboard/admin/admin.component.html
+++ b/src/app/modules/dashboard/admin/admin.component.html
@@ -16,7 +16,12 @@
           <div class="row">
             <div class="col-md-5">
               <a>
-                <img class="img-fluid rounded mb-3 mb-md-0" src="../../../../assets/img/default.png" alt="">
+                <ng-container *ngIf="organization.logoBase64; else elseTemplate">
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="data:image/jpeg;base64, {{organization.logoBase64}}" alt="Red dot">
+                </ng-container>
+                <ng-template #elseTemplate>
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="../../../../assets/img/default.png" alt="">
+                </ng-template>   
               </a>
             </div>
             <div class="col-md-7">
