--- a/src/app/modules/dashboard/admin-ticket/admin-ticket.component.html
+++ b/src/app/modules/dashboard/admin-ticket/admin-ticket.component.html
@@ -6,9 +6,14 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-md-5">
-                      <a>
-                        <img class="img-fluid rounded mb-3 mb-md-0" src="../../../../assets/img/default.png" alt="">
-                      </a>
+                    <div class="img-space">
+                        <ng-container *ngIf="organization.logoBase64; else elseTemplate">
+                            <img [src]="imageSource" />
+                        </ng-container>
+                        <ng-template #elseTemplate>
+                            <img src="../../../../assets/img/noImage.png" class="img-responsive">
+                        </ng-template>
+                    </div>
                     </div>
                     <div class="col-md-7">
                         <h1 style="color: white">Administrador | Tickets </h1>
