--- a/src/app/modules/dashboard/edit-profile/edit-profile.component.html
+++ b/src/app/modules/dashboard/edit-profile/edit-profile.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-5">
             <div class="card mt-2">
                 <div class="card-body">
-                    <input type="file" accept="image/*" class="fileInputProfile" disabled>
+                    <input type="file" accept="image/*" (change)="picked($event)" class="fileInputProfile">
                     <div class="img-space">
                         <ng-container *ngIf="user.photoURL; else elseTemplate">
                             <img [src]="user.photoURL" />
